--- a/index.html
+++ b/index.html
@@ -21,10 +21,18 @@
                 <li class="list"><a class="nav-link" href="">Контакти</a></li>
             </ul>
         </nav>
+            <div class="container-contacts">
         <ul class="head-contacts">
-            <li class="list-cont"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li class="list-cont"><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <li class="list-cont"><a class="contact-link" href="mailto:info@devstudio.com">
+                <svg class="header-contact-icon" width="16" height="12">
+                    <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>info@devstudio.com</a></li>
+            <li class="list-cont"><a class="contact-link" href="tel:+380961111111">
+                <svg class="header-contact-icon" width="10" height="16">
+                    <use href="./images/icons.svg#icon-smartphone"></use>
+                </svg>+38 096 111 11 11</a></li>
         </ul>
+            </div>
         </div>
     </header>
     <main>
