--- a/index.html
+++ b/index.html
@@ -49,20 +49,41 @@
             <h2 class="visually-hidden">Наші Переваги</h2>
             <ul class="pluses-item">
                 <li class="pluses-list">
+                    <div class="pluses-icon">
+                        <svg class="icon" width="70" height="70">
+                            <use href="./images/icons.svg#icon-antenna-1"></use>
+                        </svg>
+                    </div>
+                    <div class="features-content">
                     <h3 class="pluses-title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p class="pluses-text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                     </p>
                 </li>
                 <li class="pluses-list">
+                    <div class="pluses-icon">
+                        <svg class="icon" width="70" height="70">
+                            <use href="./images/icons.svg#icon-clock-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="pluses-title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p class="pluses-text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
                 <li class="pluses-list">
+                    <div class="pluses-icon">
+                        <svg class="icon" width="70" height="70">
+                            <use href="./images/icons.svg#icon-diagram-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="pluses-title">ПЛАНУВАННЯ</h3>
                     <p class="pluses-text">Так само консультація з широким активом значною мірою зумовлює.</p>
                 </li>
                 <li class="pluses-list">
+                    <div class="pluses-icon">
+                        <svg class="icon" width="70" height="70">
+                            <use href="./images/icons.svg#icon-astronaut-1"></use>
+                        </svg>
+                    </div>
                     <h3 class="pluses-title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p class="pluses-text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                     </p>
@@ -97,6 +118,32 @@
                     <div class="thumb-team">
                     <h3 class="team-title">Ігор Дем'яненко</h3>
                     <p class="team-text">Product Designer</p>
+                    <ul class="team-soc-list">
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-list">
