--- a/index.html
+++ b/index.html
@@ -151,6 +151,32 @@
                     <div class="thumb-team">
                     <h3 class="team-title">Ольга Рєпіна</h3>
                     <p class="team-text">Frontend Developer</p>
+                    <ul class="team-soc-list">
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-list">
@@ -158,6 +184,32 @@
                     <div class="thumb-team">
                     <h3 class="team-title">Микола Тарасов</h3>
                     <p class="team-text">Marketing</p>
+                    <ul class="team-soc-list">
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
                 <li class="team-list">
@@ -165,6 +217,32 @@
                     <div class="thumb-team">
                     <h3 class="team-title">Михайло Єрмаков</h3>
                     <p class="team-text">UI Designer</p>
+                    <ul class="team-soc-list">
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-instagram"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-twitter"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-facebook"></use>
+                                </svg>
+                            </a>
+                        </li>
+                        <li class="team-soc-item">
+                            <a class="team-soc-link" href=""><svg class="team-soc-icon" width="20" height="20">
+                                    <use href="./images/icons.svg#icon-linkedin"></use>
+                                </svg>
+                            </a>
+                        </li>
+                    </ul>
                     </div>
                 </li>
             </ul>
