--- a/index.html
+++ b/index.html
@@ -40,8 +40,10 @@
     <main>
         <!-- Герой -->
         <section class="section hero">
+            <div class="container">
             <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
-            <button class="btn-service" type="button">Замовити послугу</button>
+            <button class="btn-service btn" type="button">Замовити послугу</button>
+            </div>
         </section>
         <!-- Переваги -->
         <section class=" section pluses">
@@ -301,16 +303,18 @@
     </main>
     <footer class="footer">
         <div class="container">
+            <div class="footer-logo-adress">
         <a class="logo-foot" href="./index.html"><span class="accent">Web</span>Studio</a>
         <address class="foot-adress">
             <ul class="foot-contacts">
                 <li class="list"><a class="adress" href="https://goo.gl/maps/iiZ4q8Yc7zTfPGvo6" target="_blank"
                         rel="noopener noreferrent">
-                        м. Київ, бул. Лесі Українки, 26</a></li>
+                        м. Київ, пр-т Лесі Українки, 26</a></li>
                 <li class="list"><a class="mailt" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
                 <li class="list"><a class="mailt" href="tel:+380961111111">+38 096 111 11 11</a></li>
             </ul>
         </address>
+            </div>
         <div class="social">
             <h2 class="footer-soc-title section-title">Приєднуйтесь</h2>
             <ul class="footer-soc-list">
