--- a/portfolio.html
+++ b/portfolio.html
@@ -21,10 +21,20 @@
                     <li class="list"><a class="nav-link" href="">Контакти</a></li>
                 </ul>
             </nav>
-            <ul class="head-contacts">
-                <li class="list-cont"><a class="contact-link" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                <li class="list-cont"><a class="contact-link" href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
+            <div class="container-contacts">
+                <ul class="head-contacts">
+                    <li class="list-cont"><a class="contact-link" href="mailto:info@devstudio.com">
+                            <svg class="header-contact-icon" width="16" height="12">
+                                <use href="./images/icons.svg#icon-envelope"></use>
+                            </svg>info@devstudio.com</a>
+                    </li>
+                    <li class="list-cont"><a class="contact-link" href="tel:+380961111111">
+                            <svg class="header-contact-icon" width="10" height="16">
+                                <use href="./images/icons.svg#icon-smartphone"></use>
+                            </svg>+38 096 111 11 11</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <main>
@@ -110,16 +120,51 @@
     </main>
     <footer class="footer">
         <div class="container">
-            <a class="logo-foot" href="./index.html"><span class="accent">Web</span>Studio</a>
-            <address class="foot-adress">
-                <ul class="foot-contacts">
-                    <li class="list"><a class="adress" href="https://goo.gl/maps/iiZ4q8Yc7zTfPGvo6" target="_blank"
-                            rel="noopener noreferrent">
-                            м. Київ, бул. Лесі Українки, 26</a></li>
-                    <li class="list"><a class="mailt" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-                    <li class="list"><a class="mailt" href="tel:+380961111111">+38 096 111 11 11</a></li>
+            <div class="footer-logo-adress">
+                <a class="logo-foot" href="./index.html"><span class="accent">Web</span>Studio</a>
+                <address class="foot-adress">
+                    <ul class="foot-contacts">
+                        <li class="list"><a class="adress" href="https://goo.gl/maps/iiZ4q8Yc7zTfPGvo6" target="_blank"
+                                rel="noopener noreferrent">
+                                м. Київ, пр-т Лесі Українки, 26</a></li>
+                        <li class="list"><a class="mailt" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+                        <li class="list"><a class="mailt" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                    </ul>
+                </address>
+            </div>
+            <div class="social">
+                <h2 class="footer-soc-title section-title">Приєднуйтесь</h2>
+                <ul class="footer-soc-list">
+                    <li class="footer-soc-item">
+                        <a href="" class="footer-soc-link">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-instagram"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a href="" class="footer-soc-link">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-twitter"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a href="" class="footer-soc-link">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-facebook"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li class="footer-soc-item">
+                        <a href="" class="footer-soc-link">
+                            <svg class="footer-soc-icon" width="20" height="20">
+                                <use href="./images/icons.svg#icon-linkedin"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
-            </address>
+            </div>
         </div>
     </footer>
 </body>
