--- a/portfolio.html
+++ b/portfolio.html
@@ -52,67 +52,85 @@
             <!--Наші роботи-->
             <ul class="works">
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imgtechno.jpg" alt="Веб-сайт Технокряк" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Технокряк</h2>
                     <p class="work-text">Веб-сайт</p>
                     </div>
+                    </a>
                 </li>
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imgposter.jpg" alt="Постер з баскетболістами" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Постер New Orlean vs Golden Star</h2>
                     <p class="work-text">Дизайн</p>
                     </div>
+                    </a>
                 </li>
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imgrestoran.jpg" alt="Логотип ресторану Сіафуд" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Ресторан Seafood</h2>
                     <p class="work-text">Додаток</p>
                     </div>
+                    </a>
                 </li>
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imgprime.jpg" alt="Навушинки" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Проєкт Prime</h2>
                     <p class="work-text">Маркетинг</p>
                     </div>
+                    </a>
                 </li>
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imgboxes.jpg" alt="Коробки" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Проєкт Boxes</h2>
                     <p class="work-text">Додаток</p>
                     </div>
+                    </a>
                 </li>
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imginspiration.jpg" alt="Компьютер" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Inspiration has no Borders</h2>
                     <p class="work-text">Веб-сайт</p>
                     </div>
+                    </a>
                 </li>
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imglimitededition.jpg" alt="Журнал" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Видання Limited Edition</h2>
                     <p class="work-text">Дизайн</p>
                     </div>
+                    </a>
                 </li>
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imglab.jpg" alt="Бірка" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Проєкт LAB</h2>
                     <p class="work-text">Маркетинг</p>
                     </div>
+                    </a>
                 </li>
                 <li class="work-list">
+                    <a href="" class="portfolio-link">
                     <img src="./imgportfolio/imggrowing.jpg" alt="Ноутбук із руками людини" width="370" height="294">
                     <div class="workinfo">
                     <h2 class="work-title">Growing Business</h2>
                     <p class="work-text">Додаток</p>
                     </div>
+                    </a>
                 </li>
             </ul>
             </div>
